fix：删除无效的API，重新生成swag
